parser/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement
Rule 2     statement_list -> statement_list statement
Rule 3     statement -> insert_statement
Rule 4     statement -> select_statement
Rule 5     statement -> show_statement
Rule 6     statement -> create_table_statement
Rule 7     statement -> delete_statement
Rule 8     statement -> update_statement
Rule 9     show_statement -> SHOW TABLES
Rule 10    show_statement -> SHOW TABLES SEMI
Rule 11    show_statement -> SHOW TABLE ID
Rule 12    show_statement -> SHOW TABLE ID SEMI
Rule 13    create_table_statement -> CREATE TABLE ID LPAREN create_table_column_list RPAREN
Rule 14    create_table_statement -> CREATE TABLE ID LPAREN create_table_column_list RPAREN SEMI
Rule 15    create_table_column_list -> create_table_column_spec COMMA create_table_column_list
Rule 16    create_table_column_list -> create_table_column_spec
Rule 17    create_table_column_spec -> ID data_type qualification_list
Rule 18    create_table_column_spec -> ID data_type
Rule 19    data_type -> INT
Rule 20    data_type -> DOUBLE
Rule 21    data_type -> TEXT
Rule 22    data_type -> TINYINT
Rule 23    data_type -> SMALLINT
Rule 24    data_type -> BIGINT
Rule 25    data_type -> REAL
Rule 26    data_type -> DATETIME
Rule 27    data_type -> DATE
Rule 28    qualification_list -> qualification_spec qualification_list
Rule 29    qualification_list -> qualification_spec
Rule 30    qualification_spec -> NOT NULL
Rule 31    qualification_spec -> PRIMARY KEY
Rule 32    delete_statement -> DELETE FROM ID opt_where_clause
Rule 33    delete_statement -> DELETE FROM ID opt_where_clause SEMI
Rule 34    insert_statement -> INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
Rule 35    insert_statement -> INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
Rule 36    insert_statement -> INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
Rule 37    insert_statement -> INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
Rule 38    insert_statement -> INSERT ID VALUES LPAREN expr_list RPAREN
Rule 39    insert_statement -> INSERT ID VALUES LPAREN expr_list RPAREN SEMI
Rule 40    insert_statement -> INSERT INTO ID VALUES LPAREN expr_list RPAREN
Rule 41    insert_statement -> INSERT INTO ID VALUES LPAREN expr_list RPAREN SEMI
Rule 42    update_statement -> UPDATE ID SET asignment_list opt_where_clause
Rule 43    update_statement -> UPDATE ID SET asignment_list opt_where_clause SEMI
Rule 44    asignment_list -> asignment_spec COMMA asignment_list
Rule 45    asignment_list -> asignment_spec
Rule 46    asignment_spec -> ID EQ NUMBER
Rule 47    asignment_spec -> ID EQ STRING
Rule 48    select_statement -> SELECT select_columns FROM ID opt_where_clause opt_orderby_clause
Rule 49    select_statement -> SELECT select_columns FROM ID opt_where_clause opt_orderby_clause SEMI
Rule 50    select_columns -> TIMES
Rule 51    select_columns -> id_list
Rule 52    opt_where_clause -> WHERE search_condition
Rule 53    opt_where_clause -> <empty>
Rule 54    search_condition -> search_condition OR search_condition
Rule 55    search_condition -> search_condition AND search_condition
Rule 56    search_condition -> NOT search_condition
Rule 57    search_condition -> LPAREN search_condition RPAREN
Rule 58    search_condition -> predicate
Rule 59    predicate -> comparison_predicate
Rule 60    comparison_predicate -> scalar_exp EQ scalar_exp
Rule 61    comparison_predicate -> scalar_exp NE scalar_exp
Rule 62    comparison_predicate -> scalar_exp LT scalar_exp
Rule 63    comparison_predicate -> scalar_exp LE scalar_exp
Rule 64    comparison_predicate -> scalar_exp GT scalar_exp
Rule 65    comparison_predicate -> scalar_exp GE scalar_exp
Rule 66    scalar_exp -> scalar_exp PLUS scalar_exp
Rule 67    scalar_exp -> scalar_exp MINUS scalar_exp
Rule 68    scalar_exp -> scalar_exp TIMES scalar_exp
Rule 69    scalar_exp -> scalar_exp DIVIDE scalar_exp
Rule 70    scalar_exp -> atom
Rule 71    scalar_exp -> LPAREN scalar_exp RPAREN
Rule 72    atom -> NUMBER
Rule 73    atom -> ID
Rule 74    atom -> STRING
Rule 75    opt_orderby_clause -> ORDER BY ID
Rule 76    opt_orderby_clause -> <empty>
Rule 77    id_list -> ID
Rule 78    id_list -> id_list COMMA ID
Rule 79    expr_list -> expr
Rule 80    expr_list -> expr_list COMMA expr
Rule 81    expr -> expr PLUS term
Rule 82    expr -> expr MINUS term
Rule 83    expr -> term
Rule 84    expr -> ID
Rule 85    expr -> STRING
Rule 86    term -> term TIMES factor
Rule 87    term -> term DIVIDE factor
Rule 88    term -> factor
Rule 89    factor -> NUMBER
Rule 90    factor -> LPAREN expr RPAREN

Terminals, with rules where they appear

AND                  : 55
BIGINT               : 24
BY                   : 75
COMMA                : 15 44 78 80
CREATE               : 13 14
DATE                 : 27
DATETIME             : 26
DELETE               : 32 33
DIVIDE               : 69 87
DOUBLE               : 20
EQ                   : 46 47 60
FROM                 : 32 33 48 49
GE                   : 65
GT                   : 64
ID                   : 11 12 13 14 17 18 32 33 34 35 36 37 38 39 40 41 42 43 46 47 48 49 73 75 77 78 84
INSERT               : 34 35 36 37 38 39 40 41
INT                  : 19
INTO                 : 36 37 40 41
KEY                  : 31
LE                   : 63
LPAREN               : 13 14 34 34 35 35 36 36 37 37 38 39 40 41 57 71 90
LT                   : 62
MINUS                : 67 82
NE                   : 61
NOT                  : 30 56
NULL                 : 30
NUMBER               : 46 72 89
OR                   : 54
ORDER                : 75
PLUS                 : 66 81
PRIMARY              : 31
REAL                 : 25
RPAREN               : 13 14 34 34 35 35 36 36 37 37 38 39 40 41 57 71 90
SELECT               : 48 49
SEMI                 : 10 12 14 33 35 37 39 41 43 49
SET                  : 42 43
SHOW                 : 9 10 11 12
SMALLINT             : 23
STRING               : 47 74 85
TABLE                : 11 12 13 14
TABLES               : 9 10
TEXT                 : 21
TIMES                : 50 68 86
TINYINT              : 22
UPDATE               : 42 43
VALUES               : 34 35 36 37 38 39 40 41
WHERE                : 52
error                : 

Nonterminals, with rules where they appear

asignment_list       : 42 43 44
asignment_spec       : 44 45
atom                 : 70
comparison_predicate : 59
create_table_column_list : 13 14 15
create_table_column_spec : 15 16
create_table_statement : 6
data_type            : 17 18
delete_statement     : 7
expr                 : 79 80 81 82 90
expr_list            : 34 35 36 37 38 39 40 41 80
factor               : 86 87 88
id_list              : 34 35 36 37 51 78
insert_statement     : 3
opt_orderby_clause   : 48 49
opt_where_clause     : 32 33 42 43 48 49
predicate            : 58
qualification_list   : 17 28
qualification_spec   : 28 29
scalar_exp           : 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 71
search_condition     : 52 54 54 55 55 56 57
select_columns       : 48 49
select_statement     : 4
show_statement       : 5
statement            : 1 2
statement_list       : 2 0
term                 : 81 82 83 86 87
update_statement     : 8

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement
    (2) statement_list -> . statement_list statement
    (3) statement -> . insert_statement
    (4) statement -> . select_statement
    (5) statement -> . show_statement
    (6) statement -> . create_table_statement
    (7) statement -> . delete_statement
    (8) statement -> . update_statement
    (34) insert_statement -> . INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (35) insert_statement -> . INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (36) insert_statement -> . INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (37) insert_statement -> . INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (38) insert_statement -> . INSERT ID VALUES LPAREN expr_list RPAREN
    (39) insert_statement -> . INSERT ID VALUES LPAREN expr_list RPAREN SEMI
    (40) insert_statement -> . INSERT INTO ID VALUES LPAREN expr_list RPAREN
    (41) insert_statement -> . INSERT INTO ID VALUES LPAREN expr_list RPAREN SEMI
    (48) select_statement -> . SELECT select_columns FROM ID opt_where_clause opt_orderby_clause
    (49) select_statement -> . SELECT select_columns FROM ID opt_where_clause opt_orderby_clause SEMI
    (9) show_statement -> . SHOW TABLES
    (10) show_statement -> . SHOW TABLES SEMI
    (11) show_statement -> . SHOW TABLE ID
    (12) show_statement -> . SHOW TABLE ID SEMI
    (13) create_table_statement -> . CREATE TABLE ID LPAREN create_table_column_list RPAREN
    (14) create_table_statement -> . CREATE TABLE ID LPAREN create_table_column_list RPAREN SEMI
    (32) delete_statement -> . DELETE FROM ID opt_where_clause
    (33) delete_statement -> . DELETE FROM ID opt_where_clause SEMI
    (42) update_statement -> . UPDATE ID SET asignment_list opt_where_clause
    (43) update_statement -> . UPDATE ID SET asignment_list opt_where_clause SEMI

    INSERT          shift and go to state 13
    SELECT          shift and go to state 14
    SHOW            shift and go to state 9
    CREATE          shift and go to state 5
    DELETE          shift and go to state 11
    UPDATE          shift and go to state 1

    insert_statement               shift and go to state 8
    create_table_statement         shift and go to state 2
    select_statement               shift and go to state 3
    statement                      shift and go to state 4
    show_statement                 shift and go to state 10
    delete_statement               shift and go to state 12
    statement_list                 shift and go to state 6
    update_statement               shift and go to state 7

state 1

    (42) update_statement -> UPDATE . ID SET asignment_list opt_where_clause
    (43) update_statement -> UPDATE . ID SET asignment_list opt_where_clause SEMI

    ID              shift and go to state 15


state 2

    (6) statement -> create_table_statement .

    INSERT          reduce using rule 6 (statement -> create_table_statement .)
    SELECT          reduce using rule 6 (statement -> create_table_statement .)
    SHOW            reduce using rule 6 (statement -> create_table_statement .)
    CREATE          reduce using rule 6 (statement -> create_table_statement .)
    DELETE          reduce using rule 6 (statement -> create_table_statement .)
    UPDATE          reduce using rule 6 (statement -> create_table_statement .)
    $end            reduce using rule 6 (statement -> create_table_statement .)


state 3

    (4) statement -> select_statement .

    INSERT          reduce using rule 4 (statement -> select_statement .)
    SELECT          reduce using rule 4 (statement -> select_statement .)
    SHOW            reduce using rule 4 (statement -> select_statement .)
    CREATE          reduce using rule 4 (statement -> select_statement .)
    DELETE          reduce using rule 4 (statement -> select_statement .)
    UPDATE          reduce using rule 4 (statement -> select_statement .)
    $end            reduce using rule 4 (statement -> select_statement .)


state 4

    (1) statement_list -> statement .

    INSERT          reduce using rule 1 (statement_list -> statement .)
    SELECT          reduce using rule 1 (statement_list -> statement .)
    SHOW            reduce using rule 1 (statement_list -> statement .)
    CREATE          reduce using rule 1 (statement_list -> statement .)
    DELETE          reduce using rule 1 (statement_list -> statement .)
    UPDATE          reduce using rule 1 (statement_list -> statement .)
    $end            reduce using rule 1 (statement_list -> statement .)


state 5

    (13) create_table_statement -> CREATE . TABLE ID LPAREN create_table_column_list RPAREN
    (14) create_table_statement -> CREATE . TABLE ID LPAREN create_table_column_list RPAREN SEMI

    TABLE           shift and go to state 16


state 6

    (0) S' -> statement_list .
    (2) statement_list -> statement_list . statement
    (3) statement -> . insert_statement
    (4) statement -> . select_statement
    (5) statement -> . show_statement
    (6) statement -> . create_table_statement
    (7) statement -> . delete_statement
    (8) statement -> . update_statement
    (34) insert_statement -> . INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (35) insert_statement -> . INSERT ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (36) insert_statement -> . INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (37) insert_statement -> . INSERT INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (38) insert_statement -> . INSERT ID VALUES LPAREN expr_list RPAREN
    (39) insert_statement -> . INSERT ID VALUES LPAREN expr_list RPAREN SEMI
    (40) insert_statement -> . INSERT INTO ID VALUES LPAREN expr_list RPAREN
    (41) insert_statement -> . INSERT INTO ID VALUES LPAREN expr_list RPAREN SEMI
    (48) select_statement -> . SELECT select_columns FROM ID opt_where_clause opt_orderby_clause
    (49) select_statement -> . SELECT select_columns FROM ID opt_where_clause opt_orderby_clause SEMI
    (9) show_statement -> . SHOW TABLES
    (10) show_statement -> . SHOW TABLES SEMI
    (11) show_statement -> . SHOW TABLE ID
    (12) show_statement -> . SHOW TABLE ID SEMI
    (13) create_table_statement -> . CREATE TABLE ID LPAREN create_table_column_list RPAREN
    (14) create_table_statement -> . CREATE TABLE ID LPAREN create_table_column_list RPAREN SEMI
    (32) delete_statement -> . DELETE FROM ID opt_where_clause
    (33) delete_statement -> . DELETE FROM ID opt_where_clause SEMI
    (42) update_statement -> . UPDATE ID SET asignment_list opt_where_clause
    (43) update_statement -> . UPDATE ID SET asignment_list opt_where_clause SEMI

    INSERT          shift and go to state 13
    SELECT          shift and go to state 14
    SHOW            shift and go to state 9
    CREATE          shift and go to state 5
    DELETE          shift and go to state 11
    UPDATE          shift and go to state 1

    insert_statement               shift and go to state 8
    create_table_statement         shift and go to state 2
    select_statement               shift and go to state 3
    statement                      shift and go to state 17
    show_statement                 shift and go to state 10
    delete_statement               shift and go to state 12
    update_statement               shift and go to state 7

state 7

    (8) statement -> update_statement .

    INSERT          reduce using rule 8 (statement -> update_statement .)
    SELECT          reduce using rule 8 (statement -> update_statement .)
    SHOW            reduce using rule 8 (statement -> update_statement .)
    CREATE          reduce using rule 8 (statement -> update_statement .)
    DELETE          reduce using rule 8 (statement -> update_statement .)
    UPDATE          reduce using rule 8 (statement -> update_statement .)
    $end            reduce using rule 8 (statement -> update_statement .)


state 8

    (3) statement -> insert_statement .

    INSERT          reduce using rule 3 (statement -> insert_statement .)
    SELECT          reduce using rule 3 (statement -> insert_statement .)
    SHOW            reduce using rule 3 (statement -> insert_statement .)
    CREATE          reduce using rule 3 (statement -> insert_statement .)
    DELETE          reduce using rule 3 (statement -> insert_statement .)
    UPDATE          reduce using rule 3 (statement -> insert_statement .)
    $end            reduce using rule 3 (statement -> insert_statement .)


state 9

    (9) show_statement -> SHOW . TABLES
    (10) show_statement -> SHOW . TABLES SEMI
    (11) show_statement -> SHOW . TABLE ID
    (12) show_statement -> SHOW . TABLE ID SEMI

    TABLES          shift and go to state 18
    TABLE           shift and go to state 19


state 10

    (5) statement -> show_statement .

    INSERT          reduce using rule 5 (statement -> show_statement .)
    SELECT          reduce using rule 5 (statement -> show_statement .)
    SHOW            reduce using rule 5 (statement -> show_statement .)
    CREATE          reduce using rule 5 (statement -> show_statement .)
    DELETE          reduce using rule 5 (statement -> show_statement .)
    UPDATE          reduce using rule 5 (statement -> show_statement .)
    $end            reduce using rule 5 (statement -> show_statement .)


state 11

    (32) delete_statement -> DELETE . FROM ID opt_where_clause
    (33) delete_statement -> DELETE . FROM ID opt_where_clause SEMI

    FROM            shift and go to state 20


state 12

    (7) statement -> delete_statement .

    INSERT          reduce using rule 7 (statement -> delete_statement .)
    SELECT          reduce using rule 7 (statement -> delete_statement .)
    SHOW            reduce using rule 7 (statement -> delete_statement .)
    CREATE          reduce using rule 7 (statement -> delete_statement .)
    DELETE          reduce using rule 7 (statement -> delete_statement .)
    UPDATE          reduce using rule 7 (statement -> delete_statement .)
    $end            reduce using rule 7 (statement -> delete_statement .)


state 13

    (34) insert_statement -> INSERT . ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (35) insert_statement -> INSERT . ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (36) insert_statement -> INSERT . INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (37) insert_statement -> INSERT . INTO ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (38) insert_statement -> INSERT . ID VALUES LPAREN expr_list RPAREN
    (39) insert_statement -> INSERT . ID VALUES LPAREN expr_list RPAREN SEMI
    (40) insert_statement -> INSERT . INTO ID VALUES LPAREN expr_list RPAREN
    (41) insert_statement -> INSERT . INTO ID VALUES LPAREN expr_list RPAREN SEMI

    ID              shift and go to state 21
    INTO            shift and go to state 22


state 14

    (48) select_statement -> SELECT . select_columns FROM ID opt_where_clause opt_orderby_clause
    (49) select_statement -> SELECT . select_columns FROM ID opt_where_clause opt_orderby_clause SEMI
    (50) select_columns -> . TIMES
    (51) select_columns -> . id_list
    (77) id_list -> . ID
    (78) id_list -> . id_list COMMA ID

    TIMES           shift and go to state 24
    ID              shift and go to state 23

    id_list                        shift and go to state 26
    select_columns                 shift and go to state 25

state 15

    (42) update_statement -> UPDATE ID . SET asignment_list opt_where_clause
    (43) update_statement -> UPDATE ID . SET asignment_list opt_where_clause SEMI

    SET             shift and go to state 27


state 16

    (13) create_table_statement -> CREATE TABLE . ID LPAREN create_table_column_list RPAREN
    (14) create_table_statement -> CREATE TABLE . ID LPAREN create_table_column_list RPAREN SEMI

    ID              shift and go to state 28


state 17

    (2) statement_list -> statement_list statement .

    INSERT          reduce using rule 2 (statement_list -> statement_list statement .)
    SELECT          reduce using rule 2 (statement_list -> statement_list statement .)
    SHOW            reduce using rule 2 (statement_list -> statement_list statement .)
    CREATE          reduce using rule 2 (statement_list -> statement_list statement .)
    DELETE          reduce using rule 2 (statement_list -> statement_list statement .)
    UPDATE          reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)


state 18

    (9) show_statement -> SHOW TABLES .
    (10) show_statement -> SHOW TABLES . SEMI

    INSERT          reduce using rule 9 (show_statement -> SHOW TABLES .)
    SELECT          reduce using rule 9 (show_statement -> SHOW TABLES .)
    SHOW            reduce using rule 9 (show_statement -> SHOW TABLES .)
    CREATE          reduce using rule 9 (show_statement -> SHOW TABLES .)
    DELETE          reduce using rule 9 (show_statement -> SHOW TABLES .)
    UPDATE          reduce using rule 9 (show_statement -> SHOW TABLES .)
    $end            reduce using rule 9 (show_statement -> SHOW TABLES .)
    SEMI            shift and go to state 29


state 19

    (11) show_statement -> SHOW TABLE . ID
    (12) show_statement -> SHOW TABLE . ID SEMI

    ID              shift and go to state 30


state 20

    (32) delete_statement -> DELETE FROM . ID opt_where_clause
    (33) delete_statement -> DELETE FROM . ID opt_where_clause SEMI

    ID              shift and go to state 31


state 21

    (34) insert_statement -> INSERT ID . LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (35) insert_statement -> INSERT ID . LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (38) insert_statement -> INSERT ID . VALUES LPAREN expr_list RPAREN
    (39) insert_statement -> INSERT ID . VALUES LPAREN expr_list RPAREN SEMI

    LPAREN          shift and go to state 33
    VALUES          shift and go to state 32


state 22

    (36) insert_statement -> INSERT INTO . ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (37) insert_statement -> INSERT INTO . ID LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (40) insert_statement -> INSERT INTO . ID VALUES LPAREN expr_list RPAREN
    (41) insert_statement -> INSERT INTO . ID VALUES LPAREN expr_list RPAREN SEMI

    ID              shift and go to state 34


state 23

    (77) id_list -> ID .

    COMMA           reduce using rule 77 (id_list -> ID .)
    FROM            reduce using rule 77 (id_list -> ID .)
    RPAREN          reduce using rule 77 (id_list -> ID .)


state 24

    (50) select_columns -> TIMES .

    FROM            reduce using rule 50 (select_columns -> TIMES .)


state 25

    (48) select_statement -> SELECT select_columns . FROM ID opt_where_clause opt_orderby_clause
    (49) select_statement -> SELECT select_columns . FROM ID opt_where_clause opt_orderby_clause SEMI

    FROM            shift and go to state 35


state 26

    (51) select_columns -> id_list .
    (78) id_list -> id_list . COMMA ID

    FROM            reduce using rule 51 (select_columns -> id_list .)
    COMMA           shift and go to state 36


state 27

    (42) update_statement -> UPDATE ID SET . asignment_list opt_where_clause
    (43) update_statement -> UPDATE ID SET . asignment_list opt_where_clause SEMI
    (44) asignment_list -> . asignment_spec COMMA asignment_list
    (45) asignment_list -> . asignment_spec
    (46) asignment_spec -> . ID EQ NUMBER
    (47) asignment_spec -> . ID EQ STRING

    ID              shift and go to state 37

    asignment_list                 shift and go to state 38
    asignment_spec                 shift and go to state 39

state 28

    (13) create_table_statement -> CREATE TABLE ID . LPAREN create_table_column_list RPAREN
    (14) create_table_statement -> CREATE TABLE ID . LPAREN create_table_column_list RPAREN SEMI

    LPAREN          shift and go to state 40


state 29

    (10) show_statement -> SHOW TABLES SEMI .

    INSERT          reduce using rule 10 (show_statement -> SHOW TABLES SEMI .)
    SELECT          reduce using rule 10 (show_statement -> SHOW TABLES SEMI .)
    SHOW            reduce using rule 10 (show_statement -> SHOW TABLES SEMI .)
    CREATE          reduce using rule 10 (show_statement -> SHOW TABLES SEMI .)
    DELETE          reduce using rule 10 (show_statement -> SHOW TABLES SEMI .)
    UPDATE          reduce using rule 10 (show_statement -> SHOW TABLES SEMI .)
    $end            reduce using rule 10 (show_statement -> SHOW TABLES SEMI .)


state 30

    (11) show_statement -> SHOW TABLE ID .
    (12) show_statement -> SHOW TABLE ID . SEMI

    INSERT          reduce using rule 11 (show_statement -> SHOW TABLE ID .)
    SELECT          reduce using rule 11 (show_statement -> SHOW TABLE ID .)
    SHOW            reduce using rule 11 (show_statement -> SHOW TABLE ID .)
    CREATE          reduce using rule 11 (show_statement -> SHOW TABLE ID .)
    DELETE          reduce using rule 11 (show_statement -> SHOW TABLE ID .)
    UPDATE          reduce using rule 11 (show_statement -> SHOW TABLE ID .)
    $end            reduce using rule 11 (show_statement -> SHOW TABLE ID .)
    SEMI            shift and go to state 41


state 31

    (32) delete_statement -> DELETE FROM ID . opt_where_clause
    (33) delete_statement -> DELETE FROM ID . opt_where_clause SEMI
    (52) opt_where_clause -> . WHERE search_condition
    (53) opt_where_clause -> .

    WHERE           shift and go to state 43
    SEMI            reduce using rule 53 (opt_where_clause -> .)
    INSERT          reduce using rule 53 (opt_where_clause -> .)
    SELECT          reduce using rule 53 (opt_where_clause -> .)
    SHOW            reduce using rule 53 (opt_where_clause -> .)
    CREATE          reduce using rule 53 (opt_where_clause -> .)
    DELETE          reduce using rule 53 (opt_where_clause -> .)
    UPDATE          reduce using rule 53 (opt_where_clause -> .)
    $end            reduce using rule 53 (opt_where_clause -> .)

    opt_where_clause               shift and go to state 42

state 32

    (38) insert_statement -> INSERT ID VALUES . LPAREN expr_list RPAREN
    (39) insert_statement -> INSERT ID VALUES . LPAREN expr_list RPAREN SEMI

    LPAREN          shift and go to state 44


state 33

    (34) insert_statement -> INSERT ID LPAREN . id_list RPAREN VALUES LPAREN expr_list RPAREN
    (35) insert_statement -> INSERT ID LPAREN . id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (77) id_list -> . ID
    (78) id_list -> . id_list COMMA ID

    ID              shift and go to state 23

    id_list                        shift and go to state 45

state 34

    (36) insert_statement -> INSERT INTO ID . LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN
    (37) insert_statement -> INSERT INTO ID . LPAREN id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (40) insert_statement -> INSERT INTO ID . VALUES LPAREN expr_list RPAREN
    (41) insert_statement -> INSERT INTO ID . VALUES LPAREN expr_list RPAREN SEMI

    LPAREN          shift and go to state 47
    VALUES          shift and go to state 46


state 35

    (48) select_statement -> SELECT select_columns FROM . ID opt_where_clause opt_orderby_clause
    (49) select_statement -> SELECT select_columns FROM . ID opt_where_clause opt_orderby_clause SEMI

    ID              shift and go to state 48


state 36

    (78) id_list -> id_list COMMA . ID

    ID              shift and go to state 49


state 37

    (46) asignment_spec -> ID . EQ NUMBER
    (47) asignment_spec -> ID . EQ STRING

    EQ              shift and go to state 50


state 38

    (42) update_statement -> UPDATE ID SET asignment_list . opt_where_clause
    (43) update_statement -> UPDATE ID SET asignment_list . opt_where_clause SEMI
    (52) opt_where_clause -> . WHERE search_condition
    (53) opt_where_clause -> .

    WHERE           shift and go to state 43
    SEMI            reduce using rule 53 (opt_where_clause -> .)
    INSERT          reduce using rule 53 (opt_where_clause -> .)
    SELECT          reduce using rule 53 (opt_where_clause -> .)
    SHOW            reduce using rule 53 (opt_where_clause -> .)
    CREATE          reduce using rule 53 (opt_where_clause -> .)
    DELETE          reduce using rule 53 (opt_where_clause -> .)
    UPDATE          reduce using rule 53 (opt_where_clause -> .)
    $end            reduce using rule 53 (opt_where_clause -> .)

    opt_where_clause               shift and go to state 51

state 39

    (44) asignment_list -> asignment_spec . COMMA asignment_list
    (45) asignment_list -> asignment_spec .

    COMMA           shift and go to state 52
    WHERE           reduce using rule 45 (asignment_list -> asignment_spec .)
    SEMI            reduce using rule 45 (asignment_list -> asignment_spec .)
    INSERT          reduce using rule 45 (asignment_list -> asignment_spec .)
    SELECT          reduce using rule 45 (asignment_list -> asignment_spec .)
    SHOW            reduce using rule 45 (asignment_list -> asignment_spec .)
    CREATE          reduce using rule 45 (asignment_list -> asignment_spec .)
    DELETE          reduce using rule 45 (asignment_list -> asignment_spec .)
    UPDATE          reduce using rule 45 (asignment_list -> asignment_spec .)
    $end            reduce using rule 45 (asignment_list -> asignment_spec .)


state 40

    (13) create_table_statement -> CREATE TABLE ID LPAREN . create_table_column_list RPAREN
    (14) create_table_statement -> CREATE TABLE ID LPAREN . create_table_column_list RPAREN SEMI
    (15) create_table_column_list -> . create_table_column_spec COMMA create_table_column_list
    (16) create_table_column_list -> . create_table_column_spec
    (17) create_table_column_spec -> . ID data_type qualification_list
    (18) create_table_column_spec -> . ID data_type

    ID              shift and go to state 53

    create_table_column_spec       shift and go to state 54
    create_table_column_list       shift and go to state 55

state 41

    (12) show_statement -> SHOW TABLE ID SEMI .

    INSERT          reduce using rule 12 (show_statement -> SHOW TABLE ID SEMI .)
    SELECT          reduce using rule 12 (show_statement -> SHOW TABLE ID SEMI .)
    SHOW            reduce using rule 12 (show_statement -> SHOW TABLE ID SEMI .)
    CREATE          reduce using rule 12 (show_statement -> SHOW TABLE ID SEMI .)
    DELETE          reduce using rule 12 (show_statement -> SHOW TABLE ID SEMI .)
    UPDATE          reduce using rule 12 (show_statement -> SHOW TABLE ID SEMI .)
    $end            reduce using rule 12 (show_statement -> SHOW TABLE ID SEMI .)


state 42

    (32) delete_statement -> DELETE FROM ID opt_where_clause .
    (33) delete_statement -> DELETE FROM ID opt_where_clause . SEMI

    INSERT          reduce using rule 32 (delete_statement -> DELETE FROM ID opt_where_clause .)
    SELECT          reduce using rule 32 (delete_statement -> DELETE FROM ID opt_where_clause .)
    SHOW            reduce using rule 32 (delete_statement -> DELETE FROM ID opt_where_clause .)
    CREATE          reduce using rule 32 (delete_statement -> DELETE FROM ID opt_where_clause .)
    DELETE          reduce using rule 32 (delete_statement -> DELETE FROM ID opt_where_clause .)
    UPDATE          reduce using rule 32 (delete_statement -> DELETE FROM ID opt_where_clause .)
    $end            reduce using rule 32 (delete_statement -> DELETE FROM ID opt_where_clause .)
    SEMI            shift and go to state 56


state 43

    (52) opt_where_clause -> WHERE . search_condition
    (54) search_condition -> . search_condition OR search_condition
    (55) search_condition -> . search_condition AND search_condition
    (56) search_condition -> . NOT search_condition
    (57) search_condition -> . LPAREN search_condition RPAREN
    (58) search_condition -> . predicate
    (59) predicate -> . comparison_predicate
    (60) comparison_predicate -> . scalar_exp EQ scalar_exp
    (61) comparison_predicate -> . scalar_exp NE scalar_exp
    (62) comparison_predicate -> . scalar_exp LT scalar_exp
    (63) comparison_predicate -> . scalar_exp LE scalar_exp
    (64) comparison_predicate -> . scalar_exp GT scalar_exp
    (65) comparison_predicate -> . scalar_exp GE scalar_exp
    (66) scalar_exp -> . scalar_exp PLUS scalar_exp
    (67) scalar_exp -> . scalar_exp MINUS scalar_exp
    (68) scalar_exp -> . scalar_exp TIMES scalar_exp
    (69) scalar_exp -> . scalar_exp DIVIDE scalar_exp
    (70) scalar_exp -> . atom
    (71) scalar_exp -> . LPAREN scalar_exp RPAREN
    (72) atom -> . NUMBER
    (73) atom -> . ID
    (74) atom -> . STRING

    NOT             shift and go to state 57
    LPAREN          shift and go to state 59
    NUMBER          shift and go to state 64
    ID              shift and go to state 58
    STRING          shift and go to state 66

    atom                           shift and go to state 63
    scalar_exp                     shift and go to state 61
    comparison_predicate           shift and go to state 62
    search_condition               shift and go to state 65
    predicate                      shift and go to state 60

state 44

    (38) insert_statement -> INSERT ID VALUES LPAREN . expr_list RPAREN
    (39) insert_statement -> INSERT ID VALUES LPAREN . expr_list RPAREN SEMI
    (79) expr_list -> . expr
    (80) expr_list -> . expr_list COMMA expr
    (81) expr -> . expr PLUS term
    (82) expr -> . expr MINUS term
    (83) expr -> . term
    (84) expr -> . ID
    (85) expr -> . STRING
    (86) term -> . term TIMES factor
    (87) term -> . term DIVIDE factor
    (88) term -> . factor
    (89) factor -> . NUMBER
    (90) factor -> . LPAREN expr RPAREN

    ID              shift and go to state 69
    STRING          shift and go to state 74
    NUMBER          shift and go to state 72
    LPAREN          shift and go to state 71

    expr                           shift and go to state 68
    term                           shift and go to state 67
    expr_list                      shift and go to state 70
    factor                         shift and go to state 73

state 45

    (34) insert_statement -> INSERT ID LPAREN id_list . RPAREN VALUES LPAREN expr_list RPAREN
    (35) insert_statement -> INSERT ID LPAREN id_list . RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (78) id_list -> id_list . COMMA ID

    RPAREN          shift and go to state 75
    COMMA           shift and go to state 36


state 46

    (40) insert_statement -> INSERT INTO ID VALUES . LPAREN expr_list RPAREN
    (41) insert_statement -> INSERT INTO ID VALUES . LPAREN expr_list RPAREN SEMI

    LPAREN          shift and go to state 76


state 47

    (36) insert_statement -> INSERT INTO ID LPAREN . id_list RPAREN VALUES LPAREN expr_list RPAREN
    (37) insert_statement -> INSERT INTO ID LPAREN . id_list RPAREN VALUES LPAREN expr_list RPAREN SEMI
    (77) id_list -> . ID
    (78) id_list -> . id_list COMMA ID

